# windowsforcepurge

./: .gitignore
Dev_Toolchain/programming/.NET/projects/: CMakeLists.txt  Makefile  Program.cs  README.md  TaskKillerApp.csproj.nuget.dgspec.json  main.c  main.cpp  project.assets.json  shell.cpp  shell.h  to_run
Dev_Toolchain/programming/python/apps/: ._._2022__video_games_imdb_scores.txt  ._._2023_video_games_imdb_scores.txt  ._._22  ._._GamespoTop2024_Complete.txt  ._._a.py  ._._a.txt  ._._aa.txt  ._._combined.txt  ._._played.db  05.json  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  1IuJaH  1KGnQ2  20.py  2008.txt  2009.txt  2010.txt  2011.txt  2012.txt  2013.txt  2014.txt  2015.txt  2016.txt  2017.txt  2018.txt  2019.txt  2020.txt  2021.txt  2022.txt  21.py  22.py  (+167 more)
Dev_Toolchain/programming/python/apps/ clipboard management/: a.py
Dev_Toolchain/programming/python/apps/ file management application/: a.py
Dev_Toolchain/programming/python/apps/ trading platform/: a.py
Dev_Toolchain/programming/python/apps/CombineProject2onefile/: a.py
Dev_Toolchain/programming/python/apps/Diagnostics/: a.py
Dev_Toolchain/programming/python/apps/EverythingNoGui/: README.md  everything_cli.db  everything_cli.py
Dev_Toolchain/programming/python/apps/ForcePurgeFolderWin11/: ForcePurge.ps1  INSTALL.md  README.md  app.py  forcepurge.spec  setup.py  test_forcepurge.py  test_system_file_improvements.py
Dev_Toolchain/programming/python/apps/NetworkBooster/: a.py  b.py
Dev_Toolchain/programming/python/apps/RamOptimzer/: FINAL_STATUS.md  README.md  USAGE_GUIDE.md  launch.bat  main.py  memory_manager.py  ram_optimizer_gui.py  requirements.txt  simple_gui.py  simple_ram_optimizer.py
Dev_Toolchain/programming/python/apps/SmartDriveCleaner/: C_DRIVE_CLEANER_README.md  a.py  c.py  run_cleaner.bat
Dev_Toolchain/programming/python/apps/Terminal/: a.py
Dev_Toolchain/programming/python/apps/Uninstaller/: Cargo.toml  UltimateUninstaller.ps1  UltimateUninstaller2.ps1  a.py  b.py  build.ps1  c.py  d.py  setup.ps1
Dev_Toolchain/programming/python/apps/WebsiteBestPriceFinder/: .last_update  README.md  package.json
Dev_Toolchain/programming/python/apps/cleanPC/: a.py  b.py  c.py  d.py  e.py
Dev_Toolchain/programming/python/apps/everythingCLI/: .last_update
Dev_Toolchain/programming/python/apps/extracting/: a.py  b.py  c.py
Dev_Toolchain/programming/python/apps/laptopdrivers/: README.md  REAL_DRIVER_INSTALLER.bat  main.py  requirements.txt  run_cli.bat  run_gui.bat  setup.bat
Dev_Toolchain/programming/python/apps/music/: a.py
Dev_Toolchain/programming/python/apps/qbittorrent_throttle/: a.py
Dev_Toolchain/programming/python/apps/realtimesystemperformancemonitoringdashboardWebsite/: .last_update  a.py
Dev_Toolchain/programming/python/apps/screenshots/: a.py  b.py  c.py  d.py
Dev_Toolchain/programming/python/apps/tasKiller/: a.py  b.py  c.py  d.py  e.py  f.py  h.py  i.py  j.py  k.py  l.py  (+3 more)
(+15533 files in other folders)
