Sure, here's the contents for the file: /modern-docker-ui/modern-docker-ui/pyproject.toml

[tool.poetry]
name = "modern-docker-ui"
version = "0.1.0"
description = "A modern user interface for managing Docker containers and images."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.4"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"