[package]
name = "ultimate_uninstaller"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "uni"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
colored = "2.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
walkdir = "2.4"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "tlhelp32", "winreg"] }
winreg = "0.52"
wmi = "0.13"
anyhow = "1.0"
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }